@@ -4,11 +4,14 @@ import org.netislepafree.morpion_solitaire.model.algorithms.RandomSearchAlgorith
 
 import java.io.Serializable;
 import java.util.*;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 
 public class Grid implements Serializable {
+    private static final long serialVersionUID = 1L;
     private final Point[][] grid;
-    private final Set<Point> points;
+    private Set<Point> points;
     private List<Point> highlightedPoints=new ArrayList<>();
 
     public List<Point> getHighlightedPoints() {
@@ -22,7 +25,7 @@ public class Grid implements Serializable {
     public Set<Point> getPoints() {
         return Collections.unmodifiableSet(points);
     }
-    private final List<Line> lines;
+    private List<Line> lines;
     private Mode mode;
     private int width;
     private int height;
@@ -43,128 +46,148 @@ public class Grid implements Serializable {
         this.lines = new ArrayList<>();
         this.mode = mode;
     }
+    
     public void addPoint(int x, int y) {
-        if (grid[x][y] == null) {
-            grid[x][y] = new Point(x, y);
-            points.add(grid[x][y]);
+        Point newPoint = grid[x][y];
+        if (newPoint == null) {
+            newPoint = new Point(x, y);
+            grid[x][y] = newPoint;
+            points.add(newPoint);
         }
     }
+    
     public void addLine(Line line) {
         line.setNumber(lines.size() + 1);
-        line.getPoints().forEach(point -> {
-            if (grid[point.x][point.y] == null) {
+
+        for (Point point : line.getPoints()) {
+            Point currentPoint = grid[point.x][point.y];
+            if (currentPoint == null) {
                 addPoint(point.x, point.y);
-                line.setNewPoint(grid[point.x][point.y]);
+                currentPoint = grid[point.x][point.y];
+                line.setNewPoint(currentPoint);
             }
-            grid[point.x][point.y].lock(line.getDirection());
-        });
+            currentPoint.lock(line.getDirection());
+        }
+
         lines.add(line);
     }
 
     public void init() {
         int startX = (width - 10) / 2;
         int startY = (height - 10) / 2;
+
         for (int i = 0; i < 10; i++) {
             for (int j = 0; j < 10; j++) {
-                if (i < 3 && (j < 3 || j > 6)) continue;
-                if (i > 6 && (j < 3 || j > 6)) continue;
-                if (i > 0 && i < 9 && j > 3 && j < 6) continue;
-                if (j > 0 && j < 9 && i > 3 && i < 6) continue;
-                addPoint(startX + i, startY + j);
+                if (isValidInitPoint(i, j)) {
+                    addPoint(startX + i, startY + j);
+                }
             }
         }
     }
-// Check que quand on add un point ca forme une ligne ou pas (dans toutes les directions)
-    public List<Line> findLines(int x, int y) {
-        if (!isValidX(x) || !isValidY(y) || grid[x][y] != null) {
-            return new ArrayList<>();
-        }
-        ArrayList<Line> possibleLines = new ArrayList<>();
-        for (Direction direction : Direction.values()) {
-            possibleLines.addAll(findLines(x, y, direction));
-        }
-        return possibleLines;
+
+    private boolean isValidInitPoint(int i, int j) {
+        boolean inCenter = (i > 0 && i < 9 && j > 3 && j < 6) || (j > 0 && j < 9 && i > 3 && i < 6);
+        boolean inCorner = (i < 3 || i > 6) && (j < 3 || j > 6);
+        return !inCenter && !inCorner;
     }
+
+
+    public List<Line> findLines(int x, int y) {
+        if (!isPointValidForLine(x, y)) {
+            return Collections.emptyList();
+        }
+
+        return Arrays.stream(Direction.values())
+                     .flatMap(direction -> findLines(x, y, direction).stream())
+                     .collect(Collectors.toList());
+    }
+
+    private boolean isPointValidForLine(int x, int y) {
+        return isValidX(x) && isValidY(y) && grid[x][y] == null;
+    }
+
     public Mode getMode() {
 		return this.mode;
 	}
 
-	// Check que quand on add un point ca forme une ligne ou pas
     public List<Line> findLines(int x, int y, Direction direction) {
         if (grid[x][y] != null) {
-            return new ArrayList<>();
+            return Collections.emptyList();
         }
-        int dirX = 0, dirY = 0;
-        switch (direction) {
-            case HORIZONTAL -> dirX = 1;
-            case VERTICAL -> dirY = 1;
-            case RISE -> {
-                dirX = 1;
-                dirY = -1;
-            }
-            case FALL -> {
-                dirX = 1;
-                dirY = 1;
-            }
-        }
-        ArrayList<Line> possibleLines = new ArrayList<>();
-        int numLocksAllowed = 0;
-        switch (mode) {
-            case _5T -> numLocksAllowed = 1;
-            case _5D -> numLocksAllowed = 0;
-        }
-        for (int i = -4; i <= 0; i++) {
+
+        int dirX = direction == Direction.HORIZONTAL || direction == Direction.RISE || direction == Direction.FALL ? 1 : 0;
+        int dirY = direction == Direction.VERTICAL ? 1 : (direction == Direction.RISE ? -1 : (direction == Direction.FALL ? 1 : 0));
+
+        List<Line> possibleLines = new ArrayList<>();
+        int numLocksAllowed = mode == Mode._5T ? 1 : 0;
+
+        for (int offset = -4; offset <= 0; offset++) {
+            boolean isValidLine = true;
             Line line = new Line();
-            switch (mode) {
-                case _5T -> numLocksAllowed = 1;
-                case _5D -> numLocksAllowed = 0;
-            }
+            int locksUsed = 0;
+
             for (int j = 0; j < 5; j++) {
-                int x2 = x + dirX * (i + j);
-                int y2 = y + dirY * (i + j);
-                if (!isValidX(x2) || !isValidY(y2)) {
-                    line = null;
+                int currentX = x + dirX * (offset + j);
+                int currentY = y + dirY * (offset + j);
+
+                if (!isValidX(currentX) || !isValidY(currentY)) {
+                    isValidLine = false;
                     break;
                 }
-                if (grid[x2][y2] != null && !grid[x2][y2].isLocked(direction)) {
-                    line.addPoint(new Point(x2, y2));
-                } else if (x2 == x && y2 == y) {
-                    Point p = new Point(x2, y2);
-                    line.addPoint(p);
-                    line.setNewPoint(p);
-                } else if (grid[x2][y2] != null) {
-                    if (numLocksAllowed == 0) {
-                        line = null;
+
+                Point point = new Point(currentX, currentY);
+                boolean isCurrentPoint = currentX == x && currentY == y;
+                boolean isOccupied = grid[currentX][currentY] != null;
+
+                if (isOccupied && !grid[currentX][currentY].isLocked(direction)) {
+                    line.addPoint(point);
+                } else if (isCurrentPoint) {
+                    line.addPoint(point);
+                    line.setNewPoint(point);
+                } else if (isOccupied) {
+                    if (locksUsed >= numLocksAllowed) {
+                        isValidLine = false;
                         break;
-                    } else {
-                        line.addPoint(new Point(x2, y2));
-                        numLocksAllowed--;
                     }
+                    line.addPoint(point);
+                    locksUsed++;
                 } else {
-                    line = null;
+                    isValidLine = false;
                     break;
                 }
             }
-            if (line != null) {
+
+            if (isValidLine) {
                 line.setDirection(direction);
                 possibleLines.add(line);
             }
         }
+
         return possibleLines;
     }
 
     public void resetLine() {
-        Line line = lines.get(lines.size() - 1);
-        for (Point point : line.getPoints()) {
-            if (grid[point.x][point.y] != null) {
-                grid[point.x][point.y].unlock(line.getDirection());
-            }
+        if (lines.isEmpty()) {
+            return;
         }
-        lines.remove(line);
 
-        Point newPoint=line.getNewPoint();
-        grid[newPoint.x][newPoint.y] = null;
-        points.remove(line.getNewPoint());
+        Line lastLine = lines.remove(lines.size() - 1);
+        unlockPoints(lastLine);
+        removeNewPoint(lastLine);
+    }
+
+    private void unlockPoints(Line line) {
+        line.getPoints().stream()
+            .filter(point -> grid[point.x][point.y] != null)
+            .forEach(point -> grid[point.x][point.y].unlock(line.getDirection()));
+    }
+
+    private void removeNewPoint(Line line) {
+        Point newPoint = line.getNewPoint();
+        if (newPoint != null && grid[newPoint.x][newPoint.y] != null) {
+            grid[newPoint.x][newPoint.y] = null;
+            points.remove(newPoint);
+        }
     }
 
     public boolean isValidX(int x) {
@@ -183,65 +206,69 @@ public class Grid implements Serializable {
         return lines;
     }
 
-    public List<Line> possibleLines(){
+    public List<Line> possibleLines() {
         HashSet<Point> pointsSoFar = new HashSet<>();
         List<Line> possibleLines = new ArrayList<>();
-        points.forEach(gridPoint -> getNeighbors(gridPoint).stream()
-                .filter(point -> !pointsSoFar.contains(gridPoint))
-                .forEach(point -> {
-                    pointsSoFar.add(point);
-                    possibleLines.addAll(findLines(point.x, point.y));
-                }));
-        return possibleLines;
-    }
 
-    public Collection<Point> getNeighbors(Point point) {
-        List<Point> neighbors = new ArrayList<>();
-        for (int i = -1; i <= 1; i++) {
-            for (int j = -1; j <= 1; j++) {
-                if (i == 0 && j == 0) continue;
-                int x = point.x + i;
-                int y = point.y + j;
-                if (isValidX(x) && isValidY(y)) {
-                    neighbors.add(new Point(x, y));
+        for (Point gridPoint : points) {
+            for (Point neighbor : getNeighbors(gridPoint)) {
+                if (!pointsSoFar.contains(neighbor)) {
+                    pointsSoFar.add(neighbor);
+                    possibleLines.addAll(findLines(neighbor.x, neighbor.y));
                 }
             }
         }
-        return neighbors;
+
+        return possibleLines;
     }
+
+
+    public Collection<Point> getNeighbors(Point point) {
+        return IntStream.rangeClosed(-1, 1)
+                        .boxed()
+                        .flatMap(i -> IntStream.rangeClosed(-1, 1)
+                                               .filter(j -> !(i == 0 && j == 0))
+                                               .mapToObj(j -> new Point(point.x + i, point.y + j)))
+                        .filter(p -> isValidX(p.x) && isValidY(p.y))
+                        .collect(Collectors.toList());
+    }
+
 
     public Grid copy() {
         Grid copy = new Grid(getWidth(), getHeight(), mode);
-        for (int i = 0; i < getWidth(); i++) {
-            for (int j = 0; j < getHeight(); j++) {
-                if (grid[i][j] == null) continue;
-                copy.grid[i][j] = grid[i][j].copy();
-            }
-        }
-        copy.lines.addAll(lines.stream().map(Line::copy).toList());
-        copy.points.addAll(points);
+
+        IntStream.range(0, getWidth()).forEach(i -> 
+            IntStream.range(0, getHeight()).forEach(j -> {
+                if (grid[i][j] != null) {
+                    copy.grid[i][j] = grid[i][j].copy();
+                }
+            })
+        );
+        copy.lines = lines.stream().map(Line::copy).collect(Collectors.toList());
+        copy.points = new HashSet<>(points);
+
         return copy;
     }
+
     public Grid child(Line line) {
         Grid newGrid = copy();
         newGrid.addLine(line);
         return newGrid;
     }
 
-    public List<Line>  rollout() {
+    public List<Line> rollout() {
         Grid copy = copy();
-        List<Line> list = new LinkedList<>();
+        List<Line> list = new ArrayList<>();
         RandomSearchAlgorithm r = new RandomSearchAlgorithm();
-        while (true) {
 
-            Line compLine = r.chooseMove(copy);
-            if (compLine == null) {
-                break;
-            }
+        Line compLine;
+        while ((compLine = r.chooseMove(copy)) != null) {
             list.add(compLine);
             copy.addLine(compLine);
         }
+
         return list;
     }
+
 }
 
